# pcloud_sync_fix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  fix_pcloud_sync.py  pyproject.toml
.github/workflows/: dependabot-auto-merge.yml  test.yml
