[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcloud-sync-fixer"
version = "0.1.0"
description = "A Python script to fix stuck pCloud sync processes by manipulating the local SQLite database"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "pCloud Sync Fixer Contributors"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/pcloud-sync-fixer"
Repository = "https://github.com/your-username/pcloud-sync-fixer"
Issues = "https://github.com/your-username/pcloud-sync-fixer/issues"

[project.scripts]
pcloud-sync-fixer = "fix_pcloud_sync:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false